# aioambient

./: .bandit.yaml  .coveragerc  .gitignore  .mise.toml  .pre-commit-config.yaml  .travis.yml  34387.tags  AUTHORS.md  LICENSE  Makefile  Pipfile  README.md  example.py  example_rest_api.py  example_websocket.py  noxfile.py  pyproject.toml  renovate.json  requirements_test.txt  setup.py
.github/: pull_request_template.md  release-drafter.yml
.github/actions/install-uv/: action.yml
.github/config/: labeler.yml  labels.yml
.github/workflows/: ci.yaml  codeql.yml  publish.yaml  publish.yml  scan-pull-request.yml  static-analysis.yml  sync-labels.yml  test.yml
aioambient/: __init__.py  __version__.py  api.py  api_request_handler.py  client.py  const.py  errors.py  open_api.py  websocket.py
aioambient/util/: __init__.py  climate_utils.py  location_utils.py
examples/: test_rest_api.py  test_websocket.py
script/: release  setup  test
tests/: async_mock.py  common.py  const.py  test_api.py  test_climate_utils.py  test_open_api.py  test_util.py  test_websocket.py
tests/fixtures/: api.py  device_details_open_response.json  device_details_response.json  devices_by_location_open_response.json  devices_response.json
